--- a/package.json
+++ b/package.json
@@ -11,22 +11,34 @@
     "generate:types": "convert-proto-to-ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
-    "@tanstack/react-query": "^4.35.0",
+    "@radix-ui/react-tooltip": "^1.0.6",
+    "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-table": "^8.9.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "prismjs": "^1.29.0",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.15.0",
+    "react-simple-code-editor": "^0.13.1",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "@types/prismjs": "^1.26.0",
     "@types/qs": "^6.9.8",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
