refactor: update oneof handling for custom protojson gateway

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.8.3",
     "@tanstack/react-table": "^8.10.7",
+    "change-case": "^5.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "prismjs": "^1.29.0",
+    "protobufjs": "^7.2.5",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
