--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-simple-code-editor": "^0.13.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-pattern": "^5.0.6",
     "zod": "^3.22.4"
   },
   "devDependencies": {
