--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "generate:types": "convert-proto-to-ts"
+    "generate:types": "jdef-ts-generator && prettier --write \"src/data/**/generated/*.{ts}\""
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -29,6 +29,7 @@
     "change-case": "^5.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dev": "^0.1.3",
     "prismjs": "^1.29.0",
     "protobufjs": "^7.2.6",
     "qs": "^6.11.2",
@@ -54,6 +55,7 @@
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
+    "dotenv": "^16.4.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
