--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "generate:types": "jdef-ts-generator && prettier --write \"src/data/**/generated/*.{ts}\""
+    "generate:types": "jdef-ts-generator && prettier --write \"src/data/**/generated/*.ts\""
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
