--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-pattern": "^5.0.6",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
@@ -47,6 +48,7 @@
     "@types/qs": "^6.9.11",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
