--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.0",
     "cmdk": "0.2.1",
     "date-fns": "^3.6.0",
+    "js-yaml": "^4.1.0",
     "prismjs": "^1.29.0",
     "qs": "^6.12.0",
     "react": "^18.2.0",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@pentops/jsonapi-jdef-ts-generator": "^0.0.2",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.12.4",
     "@types/prismjs": "^1.26.3",
     "@types/qs": "^6.9.14",
