--- a/package.json
+++ b/package.json
@@ -29,19 +29,21 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-query": "^5.29.0",
+    "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-table": "^8.15.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "0.2.1",
     "date-fns": "^3.6.0",
     "js-yaml": "^4.1.0",
+    "lodash.get": "^4.4.2",
+    "lodash.set": "^4.3.2",
     "prismjs": "^1.29.0",
     "qs": "^6.12.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.2",
+    "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3",
     "react-simple-code-editor": "^0.13.1",
     "tailwind-merge": "^2.2.2",
@@ -54,11 +56,13 @@
   "devDependencies": {
     "@pentops/jsonapi-jdef-ts-generator": "^0.0.3",
     "@types/js-yaml": "^4.0.9",
+    "@types/lodash.get": "^4.4.9",
+    "@types/lodash.set": "^4.3.9",
     "@types/node": "^20.12.7",
     "@types/prismjs": "^1.26.3",
     "@types/qs": "^6.9.14",
-    "@types/react": "^18.2.75",
-    "@types/react-dom": "^18.2.24",
+    "@types/react": "^18.2.77",
+    "@types/react-dom": "^18.2.25",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
