start to update codegen

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@pentops/jsonapi-request": "^0.0.4",
+    "@pentops/normalized-query-cache": "^0.0.2",
     "@pentops/react-table-state-psm": "^0.0.6",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -35,15 +36,18 @@
     "clsx": "^2.1.1",
     "cmdk": "0.2.1",
     "date-fns": "^3.6.0",
+    "i18next": "^23.14.0",
     "js-yaml": "^4.1.0",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
+    "normalizr": "^3.6.2",
     "prismjs": "^1.29.0",
     "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-i18next": "^15.0.1",
     "react-router-dom": "^6.26.1",
     "react-simple-code-editor": "^0.13.1",
     "tailwind-merge": "^2.5.2",
@@ -54,7 +58,8 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@pentops/jsonapi-jdef-ts-generator": "^0.0.68",
+    "@pentops/j5-ts-generator-i18n-plugin": "^0.0.8",
+    "@pentops/jsonapi-jdef-ts-generator": "^0.0.69",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash.get": "^4.4.9",
     "@types/lodash.set": "^4.3.9",
@@ -68,6 +73,7 @@
     "@typescript-eslint/parser": "^7.11.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
+    "change-case": "^5.4.4",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
