--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
   "arrowParens": "always",
-  "jsxBracketSameLine": false,
+  "bracketSameLine": false,
   "singleQuote": true,
   "trailingComma": "all",
   "bracketSpacing": true,
